--- a/public/index.html
+++ b/public/index.html
@@ -33,27 +33,7 @@
                 <div class="header-content">
                     <div class="logo-container">
                         <a href="/" class="logo-link">
-                            <svg
-                                class="logo-icon"
-                                viewBox="0 0 24 24"
-                                fill="none"
-                                xmlns="http://www.w3.org/2000/svg"
-                            >
-                                <path
-                                    d="M12 22C17.5228 22 22 17.5228 22 12C22 6.47715 17.5228 2 12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22Z"
-                                    stroke="currentColor"
-                                    stroke-width="2"
-                                    stroke-linecap="round"
-                                    stroke-linejoin="round"
-                                ></path>
-                                <path
-                                    d="M12 6V12L16 14"
-                                    stroke="currentColor"
-                                    stroke-width="2"
-                                    stroke-linecap="round"
-                                    stroke-linejoin="round"
-                                ></path>
-                            </svg>
+                            <img src="/images/clocknotes-logo.svg" alt="ClockNotes Logo" class="logo-icon" height="54"/>
                             <span class="logo-text">ClockNotes</span>
                         </a>
                     </div>
@@ -456,36 +436,16 @@
                     <div class="footer-content">
                         <div class="footer-logo-container">
                             <a href="/" class="logo-link">
-                                <svg
-                                    class="footer-logo"
-                                    viewBox="0 0 24 24"
-                                    fill="none"
-                                    xmlns="http://www.w3.org/2000/svg"
-                                >
-                                    <path
-                                        d="M12 22C17.5228 22 22 17.5228 22 12C22 6.47715 17.5228 2 12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22Z"
-                                        stroke="currentColor"
-                                        stroke-width="2"
-                                        stroke-linecap="round"
-                                        stroke-linejoin="round"
-                                    ></path>
-                                    <path
-                                        d="M12 6V12L16 14"
-                                        stroke="currentColor"
-                                        stroke-width="2"
-                                        stroke-linecap="round"
-                                        stroke-linejoin="round"
-                                    ></path>
-                                </svg>
+                                <img src="/images/clocknotes-logo.svg" alt="ClockNotes Logo" class="logo-icon" height="54"/>
                                 <span class="footer-logo-text">ClockNotes</span>
                             </a>
                         </div>
-                        <div class="footer-links">
+                        <div class="footer-links hide">
                             <a href="/terms" class="footer-link">Terms and Conditions</a>
                             <a href="/privacy" class="footer-link">Privacy Policy</a>
                         </div>
                         <div class="social-links">
-                            <a href="#" class="social-link">
+                            <a href="https://www.linkedin.com" class="social-link">
                                 <svg
                                     class="social-icon"
                                     fill="currentColor"
@@ -497,7 +457,7 @@
                                     ></path>
                                 </svg>
                             </a>
-                            <a href="#" class="social-link">
+                            <a href="https://twitter.com" class="social-link">
                                 <svg
                                     class="social-icon"
                                     fill="currentColor"
